src/z80asm/z80asm2/t/20-preproc/expected/macro_22.txt
% z88dk-z80asm -v -dump-after-macro-expansion t/20-preproc//input/macro_22.asm
Define constant: __CPU_ZILOG__ = 1
Define constant: __CPU_Z80__ = 1
Assembling t/20-preproc/input/macro_22.asm...
# file: t/20-preproc/input/macro_22.asm
EndOfLine	"\n"	1:1	
t/20-preproc/input/macro_22.asm:3:2: error: Macro expansion limit exceeded
    	M2
    	^
Identifier	"halt"	12:1	keyword=HALT 
EndOfLine	"\n"	12:5	
EndOfLine	"\n"	13:1	
# file: t/20-preproc/input/macro_22.asm
Identifier	"MACRO"	2:1	keyword=MACRO 
Identifier	"M1"	2:1	
EndOfLine	"\n"	2:1	
Identifier	"M2"	3:2	
EndOfLine	"\n"	3:4	
Identifier	"ENDM"	2:1	keyword=ENDM 
# file: t/20-preproc/input/macro_22.asm
Identifier	"MACRO"	5:1	keyword=MACRO 
Identifier	"M2"	5:1	
EndOfLine	"\n"	5:1	
Identifier	"M3"	6:2	
EndOfLine	"\n"	6:4	
Identifier	"ENDM"	5:1	keyword=ENDM 
# file: t/20-preproc/input/macro_22.asm
Identifier	"MACRO"	8:1	keyword=MACRO 
Identifier	"M3"	8:1	
EndOfLine	"\n"	8:1	
Identifier	"M1"	9:2	
EndOfLine	"\n"	9:4	
Identifier	"ENDM"	8:1	keyword=ENDM 
symbol	__CPU_Z80__	1	(defined at )
symbol	__CPU_ZILOG__	1	(defined at )
